# rexos

./: .clang-format  .codespellrc  .gitignore  .hadolint.yaml  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REXOS_UPDATE.md  ROADMAP.md  cliff.toml  deny.toml  mise.toml  setup-dev.sh
.claude/: PROMPT.md  settings.json
.claude/commands/: build.md  check.md  ci.md  cross-build.md  docs.md  lint.md  new-crate.md  security.md  test.md
.github/workflows/: ci.yml  release.yml
c/: README.md
c/emulator-bridge/: Makefile  README.md  launcher.c  launcher.h
config/defaults/: emulators.toml  hotkeys.toml  system.toml
config/retroarch/: cores.cfg  retroarch.cfg
core/: README.md
core/config/: Cargo.toml
core/config/src/: emulator_config.rs  hotkeys.rs  lib.rs
core/hal/: Cargo.toml
core/hal/src/: audio.rs  device.rs  display.rs  input.rs  lib.rs  power.rs
core/storage/: Cargo.toml
core/storage/src/: lib.rs  partition.rs
crates/rexos-config/src/: device_profiles.rs  lib.rs  system_config.rs
crates/rexos-emulator/: Cargo.toml
crates/rexos-emulator/src/: launcher.rs  lib.rs  retroarch.rs  standalone.rs
crates/rexos-emulator/tests/: integration_tests.rs
crates/rexos-hal/: Cargo.toml
crates/rexos-hal/src/: audio.rs  device.rs  display.rs  input.rs  lib.rs  mock.rs  power.rs
crates/rexos-init/: Cargo.toml
crates/rexos-init/src/: main.rs
crates/rexos-launcher/: Cargo.toml
crates/rexos-launcher/src/: main.rs
crates/rexos-library/: Cargo.toml
crates/rexos-library/src/: database.rs  lib.rs  metadata.rs  scanner.rs
crates/rexos-network/: Cargo.toml
crates/rexos-network/src/: bluetooth.rs  hotspot.rs  lib.rs  wifi.rs
crates/rexos-storage/src/: lib.rs  mount.rs  partition.rs  watcher.rs
crates/rexos-update/: Cargo.toml
crates/rexos-update/src/: checker.rs  downloader.rs  installer.rs  lib.rs  manifest.rs  verification.rs
docs/: ARCHITECTURE.md  BEST_PRACTICES.md  BUILDING.md  DEVELOPMENT.md  FEATURES.md  FOLDER_STRUCTURE.md  ROADMAP.md
docs/dev/: architecture.md  base-system.md  contributing.md
docs/user/: quickstart.md
ffi/emulator-bridge/: Makefile
ffi/emulator-bridge/include/: emulator_bridge.h  launcher.h
ffi/emulator-bridge/src/: audio_bridge.c  emulator_bridge.c  input_remap.c  launcher.c  performance.c  retroarch_hook.c
packaging/buildroot/: Config.in  external.desc  external.mk
packaging/buildroot/board/rg353/: busybox.config  extlinux.conf  genimage.cfg  linux.config  post-build.sh  post-image.sh
packaging/buildroot/board/rg353/dts/: README.md  rk3566-anbernic-rg353p.dts  rk3566-anbernic-rg353ps.dts  rk3566-anbernic-rg353x.dtsi  rk3566-anbernic-rgxx3.dtsi
packaging/buildroot/configs/: rexos_rg353_defconfig
packaging/buildroot/package/libretro-cores/: Config.in  libretro-cores.mk
packaging/buildroot/package/rexos-bridge/: Config.in  rexos-bridge.mk
packaging/buildroot/package/rexos-core/: Config.in  rexos-core.mk
packaging/buildroot/package/rexos-launcher/: Config.in  rexos-launcher.mk
packaging/cross/: Cross.toml
scripts/: README.md
scripts/dev/: run-tests.sh
scripts/maintenance/: backup.sh
scripts/runtime/install/: first-boot.sh  setup-system.sh
scripts/runtime/maintenance/: cleanup.sh  update.sh
scripts/runtime/system/: shutdown.sh
scripts/runtime/update/: apply-update.sh  check-updates.sh
scripts/runtime/utils/: bluetooth-manager.sh  performance-mode.sh  wifi-toggle.sh
scripts/system/: startup.sh
scripts/update/: check-updates.sh
scripts/utils/: performance-mode.sh
services/: README.md
services/emulator/: Cargo.toml
services/emulator/src/: lib.rs  retroarch.rs  standalone.rs
testing/: README.md
testing/profiles/: qemu-virt.toml  rg353m.toml  rg35xx.toml  rgb30.toml
testing/qemu/: run-qemu.sh
tests/integration/: config_tests.rs  emulator_tests.rs  hal_tests.rs  library_tests.rs  mod.rs  storage_tests.rs
tools/: deploy.sh
