[workspace]
members = [
    "core/hal",
    "core/storage",
    "core/config",
    "services/emulator",
    "services/library",
    # Future modules:
    # "services/update",
    # "services/network",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["RexOS Contributors"]
repository = "https://github.com/santosr2/rexos"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Hardware interfaces
nix = "0.27"
libc = "0.2"

# Configuration
config = "0.13"

# Database (for game library)
rusqlite = { version = "0.30", features = ["bundled"] }

# HTTP client (for scrapers/updates)
reqwest = { version = "0.11", features = ["json"] }

# File watching
notify = "6.1"

# Command execution
which = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
