[package]
name = "rexos-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Configuration management for RexOS"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
config.workspace = true

[dev-dependencies]
tempfile = "3.10"
