[package]
name = "rexos-hal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
nix.workspace = true
libc.workspace = true
toml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
