[package]
name = "rexos-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Storage management for RexOS - SD cards, eMMC, USB drives"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
nix.workspace = true
libc.workspace = true
notify.workspace = true

[dev-dependencies]
tempfile = "3.10"
