[package]
name = "rexos-emulator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Emulator management service for RexOS"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
which.workspace = true
rexos-hal = { path = "../../core/hal" }
rexos-config = { path = "../../core/config" }

[dev-dependencies]
tempfile = "3.10"
